--- a/roles/zabbix/tasks/main.yml
+++ b/roles/zabbix/tasks/main.yml
@@ -38,12 +38,56 @@
     state: installed
 
 
-- name: Import data for server with mysql
-  shell: zcat /usr/share/doc/zabbix-server-mysql*/create.sql.gz | mysql -uzabbix -p zabbix
-  ignore_errors: yes
+- name: Enable mysql packages
+  shell: wget http://repo.mysql.com/mysql-community-release-el7-5.noarch.rpm
   args:
     warn: no
 
+- name: Install mysql package
+  shell: wget http://repo.mysql.com/mysql-community-release-el7-5.noarch.rpm
+  args:
+    warn: no
+
+- name: update all packages 
+  yum:
+    name: '*'
+    update_only: yes
+    update_cache: yes
+    state: latest
+
+- name: install mysql server
+  yum:
+    name: mysql-server 
+    state: installed
+
+- name: Restart service docker
+  service:
+    name: mysqld
+    state: started
+    enabled: yes
+
+- name: Connect to mysql database
+  mysql_db:
+    login_user: root
+    login_password: 
+ 
+- name: Create a new database with name 'zabbix'
+  mysql_db:
+    name: zabbix
+    state: present
+
+- name: Create database user with password and all database privileges and 'WITH GRANT OPTION'
+  mysql_user:
+    name: zabbix
+    password: ''
+    priv: '*.*:ALL,GRANT'
+    state: present
+
+- name: Import file.sql similar to mysql -u <username> -p <password> < hostname.sql
+  mysql_db:
+    state: import
+    name: zabbix
+    target: /usr/share/doc/zabbix-server-mysql*/create.sql.gz
 
 - name: copy zabbix_server.j2 in zabbix-server.conf
   template:
