--- a/vars/main.yml
+++ b/vars/main.yml
@@ -8,6 +8,6 @@ mysql_databases:
     collation: latin1_general_ci
 mysql_users:
   - name: zabbix
-    host: "zabbix"
+    host: "%"
     password: 
     priv: "zabbix.*:ALL"
