--- a/roles/zabbix/default/main.yml
+++ b/roles/zabbix/default/main.yml
@@ -1,6 +1,25 @@
 ---
 
 
-# server_address: ""
+# zabbix installation packages
 
+zabbix_package: "https://repo.zabbix.com/zabbix/4.0/rhel/7/x86_64/zabbix-release-4.0-1.el7.noarch.rpm"
+
+manage_config: "yum-config-manager --enable rhel-7-server-optional-rpms"
+
+
+# zabbix credentials database
+# these configurations were indicated during the creation of the database. if you change them, remember to change the configurations when creating the database
+
+zabbix_host: "localhost"
+
+zabbix_password: ""
+
+zabbix_user: "zabbix"
+
+zabbix_port_db: "3306"
+
+zabbix_db_name: "zabbix"
+
+zabbix_target: "/usr/share/doc/zabbix-server-mysql-4.0.23/create.sql.gz"
 
