--- a/zabbix_playbook.yml
+++ b/zabbix_playbook.yml
@@ -2,13 +2,13 @@
 
 # zabbix playbook
 - name: Zabbix Playbook Installation
-  hosts: server
+  hosts: localhost
   gather_facts: yes
   become: true
 
 
   vars:
-    zabbix_server_address: 52.86.118.163
+    zabbix_server_address: 127.0.0.1
 
   roles:
 
